--- a/src/eda/EDA.ipynb
+++ b/src/eda/EDA.ipynb
@@ -1,46 +1,74 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f71f2a30",
+   "metadata": {},
+   "source": [
+    "# Jupyter Notebook for exploratory data analysis"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e183bc22",
+   "metadata": {},
+   "source": [
+    "## Load relevant packages"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b0bf0e76",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mmoscao\u001b[0m (use `wandb login --relogin` to force relogin)\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: wandb version 0.13.7 is available!  To upgrade, please run:\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:  $ pip install wandb --upgrade\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '/usr/bin/python3' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/usr/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                Tracking run with wandb version 0.10.31<br/>\n",
-       "                Syncing run <strong style=\"color:#cdcd00\">cerulean-universe-4</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
-       "                Project page: <a href=\"https://wandb.ai/moscao/nyc_airbnb\" target=\"_blank\">https://wandb.ai/moscao/nyc_airbnb</a><br/>\n",
-       "                Run page: <a href=\"https://wandb.ai/moscao/nyc_airbnb/runs/j0xyeuci\" target=\"_blank\">https://wandb.ai/moscao/nyc_airbnb/runs/j0xyeuci</a><br/>\n",
-       "                Run data is saved locally in <code>/Users/moscao/Projects/udacity_mlops/project2/build-ml-pipeline-for-short-term-rental-prices/src/eda/wandb/run-20221219_183541-j0xyeuci</code><br/><br/>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     " import wandb\n",
     " import pandas as pd\n",
-    "\n",
+    " import pandas_profiling"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9dc23820",
+   "metadata": {},
+   "source": [
+    "## Load data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "417fa03e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     " run = wandb.init(project=\"nyc_airbnb\", group=\"eda\", save_code=True)\n",
     " local_path = wandb.use_artifact(\"sample.csv:latest\").file()\n",
     " df = pd.read_csv(local_path)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b9ebc042",
+   "metadata": {},
+   "source": [
+    "## Inspecting data using pandas profiling"
    ]
   },
   {
@@ -114,10 +142,17 @@
     }
    ],
    "source": [
-    "import pandas_profiling\n",
-    "\n",
     "profile = pandas_profiling.ProfileReport(df)\n",
     "profile.to_widgets()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "44b8af3c",
+   "metadata": {},
+   "source": [
+    "## Drop outliers"
    ]
   },
   {
@@ -127,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop outliers\n",
+    "\n",
     "min_price = 10\n",
     "max_price = 350\n",
     "idx = df['price'].between(min_price, max_price)\n",
@@ -599,7 +634,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -613,7 +648,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.8.9 (default, Apr 13 2022, 08:48:07) \n[Clang 13.1.6 (clang-1316.0.21.2.5)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
